@@ -1,32 +1,31 @@
 package hcmute.puzzle.services.impl;
 
-import freemarker.template.Configuration;
+import freemarker.template.TemplateException;
 import hcmute.puzzle.configuration.SystemInfo;
 import hcmute.puzzle.entities.TokenEntity;
 import hcmute.puzzle.entities.UserEntity;
 import hcmute.puzzle.exception.CustomException;
-import hcmute.puzzle.mail.MailObject;
-import hcmute.puzzle.mail.MailUtil;
-import hcmute.puzzle.mail.SendMail;
 import hcmute.puzzle.repository.TokenRepository;
 import hcmute.puzzle.repository.UserRepository;
 import hcmute.puzzle.response.DataResponse;
+
 import hcmute.puzzle.services.SecurityService;
-import hcmute.puzzle.utils.FreeMakerTemplateUtils;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutionException;
+import java.util.logging.Logger;
 import javax.mail.MessagingException;
-import javax.mail.internet.MimeMessage;
 import javax.servlet.http.HttpServletRequest;
+
+import hcmute.puzzle.services.UserService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.env.Environment;
-import org.springframework.mail.javamail.MimeMessageHelper;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 @Service
+@Slf4j
 public class SecurityServiceImpl implements SecurityService {
   @Autowired private TokenRepository tokenRepository;
 
@@ -34,12 +33,20 @@ public class SecurityServiceImpl implements SecurityService {
 
   @Autowired PasswordEncoder passwordEncoder;
 
-  @Autowired private Environment environment;
+  @Autowired MailService mailService;
+
+  @Autowired
+  UserService userService;
 
   public static final String RESET_PASSWORD_TOKEN = "RESET_PASSWORD_TOKEN";
 
   @Override
-  public DataResponse sendTokenForgotPwd(HttpServletRequest request, String email) {
+  public DataResponse sendTokenForgotPwd(HttpServletRequest request, String email)
+      throws MessagingException,
+          TemplateException,
+          IOException,
+          ExecutionException,
+          InterruptedException {
     UserEntity foundUser = userRepository.getUserByEmail(email);
     if (foundUser == null) {
       throw new RuntimeException("Can not found User Account with email " + email);
@@ -55,11 +62,9 @@ public class SecurityServiceImpl implements SecurityService {
 
     if (!existedTokens.isEmpty()) {
       List<TokenEntity> validTokens =
-          existedTokens.stream()
-              .filter(token -> token.getExpiryTime().after(new Date()))
-              .collect(Collectors.toList());
-      if (validTokens == null || validTokens.size() > 0)
-        throw new CustomException("You just requested change password, try again after 5 minutes");
+          existedTokens.stream().filter(token -> token.getExpiryTime().after(new Date())).toList();
+      if (!validTokens.isEmpty())
+        throw new CustomException("You just requested change password, try again after 1 minutes");
     }
     String tokenValue = UUID.randomUUID().toString();
     Date nowTime = new Date();
@@ -67,53 +72,34 @@ public class SecurityServiceImpl implements SecurityService {
 
     TokenEntity createToken = new TokenEntity();
     createToken.setToken(tokenValue);
-    createToken.setCreateTime(nowTime);
     createToken.setExpiryTime(expiredTime);
     createToken.setUser(foundUser);
     createToken.setType(RESET_PASSWORD_TOKEN);
 
-    tokenRepository.save(createToken);
     String urlFrontEnd = "https://keen-semifreddo-66d931.netlify.app/reset-password";
     String finalUrlFrontEnd = urlFrontEnd + "?token=" + tokenValue;
-    MailObject mail =
-        new MailObject(
-            foundUser.getEmail(),
-            "Reset Password",
-            "Link reset password: "
-                + finalUrlFrontEnd
-                + "\nSupport email: "
-                + environment.getProperty("support.email"),
-            null);
-    SendMail.sendMail(mail);
+    this.userService.sendMailForgotPwd(foundUser.getEmail(), finalUrlFrontEnd, createToken);
 
-    return new DataResponse("send email reset password successful");
+    log.info("Responseeeeeeeeeeee");
+    return new DataResponse("Mail is sent, please check!");
   }
 
-  public DataResponse sendTokenForgotPwd(String receiveMail, String urlResetPass)
-      throws MessagingException, IOException {
-    //    Session session = getSe
-    MailUtil mailUtil = new MailUtil();
-    MimeMessage mimeMessage = new MimeMessage(mailUtil.getSessionMail());
-    MimeMessageHelper helper =
-        new MimeMessageHelper(
-            mimeMessage,
-            MimeMessageHelper.MULTIPART_MODE_MIXED_RELATED);
+  //  private TokenEntity createTokenForgotPassword(UserEntity foundUser) {
+  //    String tokenValue = UUID.randomUUID().toString();
+  //    Date nowTime = new Date();
+  //    Date expiredTime = new Date(nowTime.getTime() + SystemInfo.TOKEN_RESET_PASSWORD_DURATION);
+  //
+  //    TokenEntity createToken = new TokenEntity();
+  //    createToken.setToken(tokenValue);
+  //    createToken.setCreateTime(nowTime);
+  //    createToken.setExpiryTime(expiredTime);
+  //    createToken.setUser(foundUser);
+  //    createToken.setType(RESET_PASSWORD_TOKEN);
+  //
+  //    return tokenRepository.save(createToken);
+  //  }
 
-    //    helper.setTo(bo.getToEmails().parallelStream().toArray(String[]::new));
-    //    helper.setBcc(bo.getBccEmails().parallelStream().toArray(String[]::new));
-    //    helper.setCc(bo.getCcEmails().parallelStream().toArray(String[]::new));
-    //    helper.setText(textBody, htmlBody);
-    helper.setSubject("[PUZZLE] reset password");
-    helper.setFrom(MailUtil.SYS_MAIL);
-    helper.setTo(receiveMail);
-    Map<String, Object> model = new HashMap<>();
-    model.put("url", urlResetPass);
-    // Configuration freeMakerConfiguration = FreeMakerTemplateUtils.getFreeMakerConfiguration();
-    // Template temp = freeMakerConfiguration.getTemplate("forgot_password.html");
-    // FreeMakerTemplateUtils
 
-    return null;
-  }
 
   @Override
   public DataResponse resetPassword(String token, String newPassword) {
